<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controler.NewReunion"
    android:background="@color/colorPrimaryDark"
    tools:ignore="MissingClass">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ScrollViewSize">




        <!-- cardview with all the reunion details -->
        <androidx.cardview.widget.CardView
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintBottom_toTopOf="@+id/save"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardBackgroundColor="@color/white">



            <!--Select room-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Choisir une salle"
                android:textSize="18sp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                />
            <Spinner
                android:id="@+id/roomList"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="50dp" />


            <!--Select date-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Le :"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop = "150dp"
                />

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/date"
                android:focusableInTouchMode="false"
                />


            <!--Select time-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A :"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop = "235dp" />
            <EditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time"
                android:layout_marginTop = "225dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="50dp"
                android:focusableInTouchMode="false"/>

            <!--Enter an object-->
            <EditText
                android:id="@+id/reunion_object"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/object"
                android:layout_marginTop = "310dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="50dp"/>



            <!--Selecte collegue's e-mail-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailsLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="400dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="4"
                    android:minLines="4"
                    android:ems="10"
                    android:hint="@string/people"
                    android:inputType="textEmailAddress"/>

                    <ListView
                    android:id="@+id/emailList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <!-- saving button -->
        <Button
            android:id="@+id/save"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_baseline_check_circle_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.237" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>