<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/filter_menu"
        android:icon="@drawable/ic_menu"
        android:title="title_menu"
        app:showAsAction="always">
        <menu>
            <group>
                <item
                    android:id="@+id/menu_filter_by_room"
                    android:title="Filter by room"
                    android:icon="@drawable/ic_baseline_place_24"
                    app:showAsAction="always">
                </item>
                <item
                    android:id="@+id/menu_filter_by_date"
                    android:title="Filter by date"
                    android:icon="@drawable/ic_baseline_date_range_24"
                    app:showAsAction="ifRoom">

                </item>
                <item
                android:id="@+id/menu_reset_filters"
                android:title="Reset filters"
                    android:icon="@drawable/ic_baseline_autorenew_24"
                app:showAsAction="ifRoom"/>

                <item
                    android:id="@+id/menu_back"
                    android:title="Back"
                    android:icon="@drawable/ic_baseline_arrow_back_24"
                    app:showAsAction="ifRoom"/>
            </group>
        </menu>
    </item>



</menu>