...
                android:textColor="@color/white"
                android:text="Objet :"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop = "335dp" />
            <TextView
                android:id="@+id/reunion_details"
                android:text="Reunion A"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="320dp"
                android:background="@color/white"
...
